# Crypto-Signal

./: pyproject.toml
app/: app.py
